Corrects the spacing of item names and ratings in hover bubble on mobile devices and web sizes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -641,7 +641,7 @@ background: repeating-linear-gradient(
 .ratings {
 	font-size: 0.9em;
 	color: red;
-	margin: -115px -10px 0px -93px;
+	margin: -125px -10px 0px -93px;
 	padding: 20px 0px 20px 38px;
 	position: absolute;
 	z-index: 4;
@@ -964,7 +964,7 @@ margin-bottom: 7%;
 }
 .itemName {
 	font-size: 1.0em;
-	margin: 15px 0px 0px -50px;
+	margin: 25px 0px 0px -55px;
 	font-weight: bold;
 	color: #0000EE;
 	display: none;
@@ -973,7 +973,7 @@ margin-bottom: 7%;
 .speechBubble {
 	min-width: 100px;
 	height: 50px;
-	margin: -140px -10px 0px -72px;
+	margin: -160px -10px 0px -72px;
 	position: relative;
 	z-index: 2;
 	display: none;
@@ -1090,7 +1090,7 @@ a:active {
 }
 .itemName {
 	font-size: 1.4em;
-	margin: 35px 0px 0px -80px;
+	margin: 45px 0px 0px -80px;
 	font-weight: bold;
 	color: #0000EE;
 	display: none;
@@ -1099,7 +1099,7 @@ a:active {
 .speechBubble {
 	min-width: 150px;
 	height: 100px;
-	margin: -250px -10px 0px -102px;
+	margin: -260px -10px 0px -102px;
 	position: relative;
 	z-index: 2;
 	display: none;
@@ -1234,7 +1234,7 @@ height: 40px;
 width: 40px;
 position: absolute;
 box-shadow: inset -5px -5px 8px rgba(0,0,0,.5);
-z-index: 3;
+z-index: 9999;
 margin-left: 6%;
 margin-bottom: 5%;
 margin-right: -2%;
